--- a/index.html
+++ b/index.html
@@ -6672,16 +6672,18 @@ const hasDetails = (event) => {
                     })()}
                   </div>
                 );
-              })}
+                            })}
 
-             <div className="flex justify-between items-center mb-6 relative z-10">
-  <h3 className={`text-lg sm:text-xl font-bold uppercase tracking-wide ${darkMode ? 'text-gray-100' : 'text-gray-900'}`}>MATCH SUMMARY</h3>
-  <div className={`${darkMode ? 'border border-gray-600 text-gray-400' : 'bg-gray-100 text-gray-800'} px-3 py-1 rounded-full text-[10px] font-bold tracking-widest uppercase`}>FINAL</div>
-</div>
-
+              <div className={`${darkMode ? 'bg-gray-800 border border-gray-700' : 'bg-white shadow-xl'} rounded-2xl p-4 sm:p-8 mb-8 relative`}>
+                <div className="flex justify-between items-center mb-6 relative z-10">
+                  <h3 className={`text-lg sm:text-xl font-bold uppercase tracking-wide ${darkMode ? 'text-gray-100' : 'text-gray-900'}`}>MATCH SUMMARY</h3>
+                  {matchEnded && (
+                    <div className={`${darkMode ? 'border border-gray-600 text-gray-400' : 'bg-gray-100 text-gray-800'} px-3 py-1 rounded-full text-[10px] font-bold tracking-widest uppercase`}>FINAL</div>
+                  )}
+                </div>
 
                 <div className="grid grid-cols-2 gap-4">
-                  {['home', 'away'].map(team => {
+{['home', 'away'].map(team => {
                     const name = team === 'home' ? homeName : awayName;
                     const score = team === 'home' ? totals.homeScore : totals.awayScore;
                     const saves = team === 'home' ? totals.homeSaves : totals.awaySaves;
