--- a/index.html
+++ b/index.html
@@ -6430,42 +6430,79 @@ const hasDetails = (event) => {
                 </div>
               </div>
 
-              <div className={`${darkMode ? 'bg-gray-800 border border-gray-700' : 'bg-white'} rounded-lg shadow p-3`}>
-                {!spotifyLoaded && !spotifyLoading ? <button onClick={loadSpotify} className={`w-full ${darkMode ? 'bg-gray-700 hover:bg-gray-600' : 'bg-gray-600 hover:bg-gray-700'} text-white py-8 rounded-lg font-semibold text-lg transition-colors`}>Load Spotify</button> : spotifyLoading ? <div className={`py-8 text-center ${darkMode ? 'text-gray-300' : 'text-gray-600'}`}><div className="animate-spin inline-block w-8 h-8 border-4 border-current border-t-transparent rounded-full mb-2"></div><div>Loading...</div></div> : <div style={{ opacity: 0, animation: 'fadeIn 0.5s ease-in forwards' }}>
-                  {spotifyFallback || !getSpotifyUrl(spotifyPlaylist) ? (
-                    <div className={`text-center py-8`}>
-                      <a
-                        href={spotifyPlaylist}
-                        target="_blank"
-                        rel="noopener noreferrer"
-                        className={`inline-block ${darkMode ? 'bg-gray-700 hover:bg-gray-600' : 'bg-gray-600 hover:bg-gray-700'} text-white px-6 py-3 rounded-lg font-semibold transition-colors`}
-                      >
-                        Open Spotify in new window →
-                      </a>
-                    </div>
-                  ) : (
-                    <div>
-                      <iframe
-                        style={{ borderRadius: '12px' }}
-                        src={getSpotifyUrl(spotifyPlaylist)}
-                        width="100%"
-                        height="520"
-                        frameBorder="0"
-                        allowFullScreen=""
-                        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-                        loading="lazy"
-                        onError={() => setSpotifyFallback(true)}
-                        title="Spotify Playlist"
-                      ></iframe>
-                      <div className={`text-center mt-3 text-xs ${darkMode ? 'text-gray-400' : 'text-gray-500'}`}>
-                        <button onClick={() => setSpotifyFallback(true)} className={`${darkMode ? 'text-gray-400 hover:text-gray-300' : 'text-gray-600 hover:text-gray-800'} underline`}>
-                          Show direct link to playlist instead
-                        </button>
-                      </div>
-                    </div>
-                  )}
-                </div>}
-              </div>
+             <div className={`${darkMode ? 'bg-gray-800 border border-gray-700' : 'bg-white'} rounded-lg shadow p-3`}>
+  {!spotifyLoaded && !spotifyLoading ? (
+    <button 
+      onClick={loadSpotify} 
+      className="w-full bg-[#1DB954] hover:bg-[#1ed760] active:bg-[#1aa34a] text-white py-6 rounded-xl font-bold text-base transition-all shadow-lg flex items-center justify-center gap-3 group"
+      style={{ fontFamily: 'system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif' }}
+    >
+      {/* Spotify Logo SVG */}
+      <svg 
+        viewBox="0 0 24 24" 
+        className="w-8 h-8 group-hover:scale-110 transition-transform" 
+        fill="currentColor"
+      >
+        <path d="M12 0C5.4 0 0 5.4 0 12s5.4 12 12 12 12-5.4 12-12S18.66 0 12 0zm5.521 17.34c-.24.359-.66.48-1.021.24-2.82-1.74-6.36-2.101-10.561-1.141-.418.122-.779-.179-.899-.539-.12-.421.18-.78.54-.9 4.56-1.021 8.52-.6 11.64 1.32.42.18.479.659.301 1.02zm1.44-3.3c-.301.42-.841.6-1.262.3-3.239-1.98-8.159-2.58-11.939-1.38-.479.12-1.02-.12-1.14-.6-.12-.48.12-1.021.6-1.141C9.6 9.9 15 10.561 18.72 12.84c.361.181.54.78.241 1.2zm.12-3.36C15.24 8.4 8.82 8.16 5.16 9.301c-.6.179-1.2-.181-1.38-.721-.18-.601.18-1.2.72-1.381 4.26-1.26 11.28-1.02 15.721 1.621.539.3.719 1.02.419 1.56-.299.421-1.02.599-1.559.3z"/>
+      </svg>
+      
+      <span className="text-lg tracking-wide">
+        Load Spotify Player
+      </span>
+    </button>
+  ) : spotifyLoading ? (
+    <div className={`py-8 text-center ${darkMode ? 'text-gray-300' : 'text-gray-600'}`}>
+      <div className="animate-spin inline-block w-8 h-8 border-4 border-current border-t-transparent rounded-full mb-2"></div>
+      <div>Loading...</div>
+    </div>
+  ) : (
+    <div style={{ opacity: 0, animation: 'fadeIn 0.5s ease-in forwards' }}>
+      {spotifyFallback || !getSpotifyUrl(spotifyPlaylist) ? (
+        <div className={`text-center py-8`}>
+          <a
+            href={spotifyPlaylist}
+            target="_blank"
+            rel="noopener noreferrer"
+            className="inline-flex items-center gap-3 bg-[#1DB954] hover:bg-[#1ed760] active:bg-[#1aa34a] text-white px-6 py-4 rounded-xl font-bold transition-all shadow-lg group"
+            style={{ fontFamily: 'system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif' }}
+          >
+            {/* Spotify Logo SVG */}
+            <svg 
+              viewBox="0 0 24 24" 
+              className="w-6 h-6 group-hover:scale-110 transition-transform" 
+              fill="currentColor"
+            >
+              <path d="M12 0C5.4 0 0 5.4 0 12s5.4 12 12 12 12-5.4 12-12S18.66 0 12 0zm5.521 17.34c-.24.359-.66.48-1.021.24-2.82-1.74-6.36-2.101-10.561-1.141-.418.122-.779-.179-.899-.539-.12-.421.18-.78.54-.9 4.56-1.021 8.52-.6 11.64 1.32.42.18.479.659.301 1.02zm1.44-3.3c-.301.42-.841.6-1.262.3-3.239-1.98-8.159-2.58-11.939-1.38-.479.12-1.02-.12-1.14-.6-.12-.48.12-1.021.6-1.141C9.6 9.9 15 10.561 18.72 12.84c.361.181.54.78.241 1.2zm.12-3.36C15.24 8.4 8.82 8.16 5.16 9.301c-.6.179-1.2-.181-1.38-.721-.18-.601.18-1.2.72-1.381 4.26-1.26 11.28-1.02 15.721 1.621.539.3.719 1.02.419 1.56-.299.421-1.02.599-1.559.3z"/>
+            </svg>
+            <span>Open in Spotify</span>
+            <span className="text-xl">→</span>
+          </a>
+        </div>
+      ) : (
+        <div>
+          <iframe
+            style={{ borderRadius: '12px' }}
+            src={getSpotifyUrl(spotifyPlaylist)}
+            width="100%"
+            height="520"
+            frameBorder="0"
+            allowFullScreen=""
+            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+            loading="lazy"
+            onError={() => setSpotifyFallback(true)}
+            title="Spotify Playlist"
+          ></iframe>
+          <div className={`text-center mt-3 text-xs ${darkMode ? 'text-gray-400' : 'text-gray-500'}`}>
+            <button onClick={() => setSpotifyFallback(true)} className={`${darkMode ? 'text-gray-400 hover:text-gray-300' : 'text-gray-600 hover:text-gray-800'} underline`}>
+              Show direct link to playlist instead
+            </button>
+          </div>
+        </div>
+      )}
+    </div>
+  )}
+</div>
+
 
             </div>}
 
