--- a/index.html
+++ b/index.html
@@ -5730,7 +5730,7 @@ if (trackingMode === 'advanced' && isMultiplayer && matchRef.current) {
                     {!settingsCollapsed.content && (
                       <div className="space-y-3 ml-2">
                         <div>
-                          <label className="block text-xs mb-1 opacity-75">Spotify Playlist URL</label>
+                          <label className="block text-xs mb-1 opacity-75">Spotify Playlist</label>
                           <div className="flex gap-2">
                             <input
                               type="text"
@@ -5760,7 +5760,7 @@ if (trackingMode === 'advanced' && isMultiplayer && matchRef.current) {
                         </div>
 
                         <div>
-                          <label className="block text-xs mb-1 opacity-75">External Link URL</label>
+                          <label className="block text-xs mb-1 opacity-75">External Link</label>
                           <input
                             type="text"
                             value={externalLinkUrl}
