--- a/index.html
+++ b/index.html
@@ -40,97 +40,105 @@
     }
 
     .sparkle {
-      animation: sparkle .6s ease-in-out
-    }
+      // Announce Modal
+      const AnnounceModal = ({ show, onClose, darkMode, advancedMode }) => {
+        if (!show) return null;
+        return (
+          <div className="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-[9999] p-4">
+            <div className={`${darkMode ? 'bg-gray-800 text-white' : 'bg-white'} rounded-2xl shadow-2xl max-w-lg w-full max-h-[90vh] overflow-hidden flex flex-col`}>
+              <div className={`${darkMode ? 'bg-gray-700 border-b border-gray-600' : 'bg-gradient-to-r from-blue-600 to-blue-800'} text-white px-6 py-4 flex justify-between items-center`}>
+                <h2 className="text-xl font-bold">Announce</h2>
+                <button onClick={onClose} className={`${darkMode ? 'hover:bg-gray-600' : 'hover:bg-white hover:bg-opacity-20'} p-2 rounded-lg transition-colors`}>
+                  <svg className="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M6 18L18 6M6 6l12 12" />
+                  </svg>
+                </button>
+              </div>
+              <div className="flex-1 overflow-y-auto p-6 space-y-6">
+                <div>
+                  <label className={`block text-sm font-semibold mb-2 ${darkMode ? 'text-gray-300' : 'text-gray-700'}`}>Headline</label>
+                  <input
+                    type="text"
+                    value={announcementTitle}
+                    onChange={e => setAnnouncementTitle(e.target.value)}
+                    placeholder="e.g. Powerplay for Home!"
+                    className={`w-full px-4 py-3 border rounded-lg ${darkMode ? 'bg-gray-700 border-gray-600 text-white' : 'bg-white border-gray-300 text-gray-900'} font-mono text-sm`}
+                  />
+                </div>
+                <div>
+                  <label className={`block text-sm font-semibold mb-2 ${darkMode ? 'text-gray-300' : 'text-gray-700'}`}>Message</label>
+                  <textarea
+                    value={announcementMessage}
+                    onChange={e => setAnnouncementMessage(e.target.value)}
+                    placeholder="Enter announcement message..."
+                    className={`w-full px-4 py-3 border rounded-lg ${darkMode ? 'bg-gray-700 border-gray-600 text-white' : 'bg-white border-gray-300 text-gray-900'} font-mono text-sm`}
+                    rows={3}
+                  />
+                </div>
+                {advancedMode && (
+                  <div>
+                    <label className={`block text-sm font-semibold mb-2 ${darkMode ? 'text-gray-300' : 'text-gray-700'}`}>Time</label>
+                    <input
+                      type="text"
+                      value={announcementTime}
+                      onChange={e => setAnnouncementTime(e.target.value)}
+                      placeholder="e.g. 12:34"
+                      className={`w-full px-4 py-3 border rounded-lg ${darkMode ? 'bg-gray-700 border-gray-600 text-white' : 'bg-white border-gray-300 text-gray-900'} font-mono text-sm`}
+                    />
+                  </div>
+                )}
 
-    @keyframes eq-bar {
-
-      0%,
-      100% {
-        height: 30%
-      }
-
-      50% {
-        height: 80%
-      }
-    }
-
-    .eq-bar {
-      animation: eq-bar 0.9s ease-in-out infinite alternate;
-    }
-
-    .eq-bar:nth-child(3) {
-      animation-delay: 0.3s
-    }
-
-    @keyframes pulse-red {
-      0% {
-        transform: scale(1);
-        box-shadow: 0 0 0 0 rgba(239, 68, 68, 0.7);
-      }
-
-      70% {
-        transform: scale(1.05);
-        box-shadow: 0 0 0 10px rgba(239, 68, 68, 0);
-      }
-
-      100% {
-        transform: scale(1);
-        box-shadow: 0 0 0 0 rgba(239, 68, 68, 0);
-      }
-    }
-
-    .pulse-red {
-      animation: pulse-red 1s infinite;
-    }
-
-    @keyframes pulse-blue {
-      0% {
-        transform: scale(1);
-        box-shadow: 0 0 0 0 rgba(59, 130, 246, 0.7);
-      }
-
-      70% {
-        transform: scale(1.05);
-        box-shadow: 0 0 0 10px rgba(59, 130, 246, 0);
-      }
-
-      100% {
-        transform: scale(1);
-        box-shadow: 0 0 0 0 rgba(59, 130, 246, 0);
-      }
-    }
-
-    .pulse-blue {
-      animation: pulse-blue 1s infinite;
-    }
-
-    @keyframes slideOutLeft {
-      from {
-        transform: translateX(0);
-        opacity: 1;
-      }
-
-      to {
-        transform: translateX(-100%);
-        opacity: 0;
-      }
-    }
-
-    @keyframes slideInFromRight {
-      from {
-        transform: translateX(100%);
-        opacity: 0;
-      }
-
-      to {
-        transform: translateX(0);
-        opacity: 1;
-      }
-    }
-
-    @keyframes slideOutRight {
-      from {
+                {/* List of existing announcements with edit/delete */}
+                {announcementEvents.length > 0 && (
+                  <div className="mt-6">
+                    <div className="font-semibold mb-2">Existing Announcements</div>
+                    <ul className="space-y-2">
+                      {announcementEvents.map((ev, idx) => (
+                        <li key={ev.timestamp} className={`flex items-center justify-between p-2 rounded ${darkMode ? 'bg-gray-700' : 'bg-gray-100'}`}>
+                          <div>
+                            <div className="font-bold text-sm">{ev.headline}</div>
+                            <div className="text-xs opacity-80">{ev.message}</div>
+                            {ev.time && <div className="text-xs opacity-60">{ev.time}</div>}
+                          </div>
+                          <div className="flex gap-1">
+                            <button onClick={() => handleEditAnnouncement(idx)} className="px-2 py-1 text-xs rounded bg-blue-500 hover:bg-blue-600 text-white">Edit</button>
+                            <button onClick={() => handleDeleteAnnouncement(idx)} className="px-2 py-1 text-xs rounded bg-red-500 hover:bg-red-600 text-white">Delete</button>
+                          </div>
+                        </li>
+                      ))}
+                    </ul>
+                  </div>
+                )}
+              </div>
+              <div className={`${darkMode ? 'bg-gray-700 border-t border-gray-600' : 'bg-gray-50 border-t border-gray-200'} px-6 py-4 space-y-3`}>
+                <div className="flex gap-3">
+                  <button
+                    onClick={() => {
+                      setAnnouncementTitle('');
+                      setAnnouncementMessage('');
+                      setAnnouncementTime('');
+                      setEditingAnnouncementIndex(null);
+                      onClose();
+                    }}
+                    className={`flex-1 ${darkMode ? 'bg-gray-600 hover:bg-gray-500 text-white' : 'bg-gray-200 hover:bg-gray-300 text-gray-900'} py-3 rounded-lg font-semibold`}
+                  >
+                    Cancel
+                  </button>
+                  <button
+                    onClick={() => {
+                      handleSaveAnnouncement();
+                      if (editingAnnouncementIndex === null) onClose();
+                    }}
+                    className="flex-1 bg-blue-600 hover:bg-blue-700 text-white py-3 rounded-lg font-semibold"
+                  >
+                    {editingAnnouncementIndex !== null ? 'Update' : 'Save'}
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        );
+      };
         transform: translateX(0);
         opacity: 1;
       }
@@ -563,6 +571,74 @@
       const [announcementMessage, setAnnouncementMessage] = useState('');
       const [announcementTime, setAnnouncementTime] = useState('');
       const [editingAnnouncementIndex, setEditingAnnouncementIndex] = useState(null);
+
+      // Helper: Filter only announcement events
+      const announcementEvents = otherEvents.filter(e => e.type === 'announcement');
+
+      // Save or update announcement event
+      const handleSaveAnnouncement = () => {
+        if (isViewer) return;
+        if (!announcementTitle.trim() || !announcementMessage.trim()) return;
+        const newEvent = {
+          type: 'announcement',
+          headline: announcementTitle,
+          message: announcementMessage,
+          time: announcementTime,
+          period: currentPeriod,
+          timestamp: editingAnnouncementIndex !== null ? announcementEvents[editingAnnouncementIndex].timestamp : Date.now(),
+        };
+        let updatedEvents;
+        if (editingAnnouncementIndex !== null) {
+          // Update existing
+          const globalIdx = otherEvents.findIndex(e => e.type === 'announcement' && announcementEvents[editingAnnouncementIndex] && e.timestamp === announcementEvents[editingAnnouncementIndex].timestamp);
+          updatedEvents = otherEvents.map((ev, i) => i === globalIdx ? newEvent : ev);
+        } else {
+          updatedEvents = [...otherEvents, newEvent];
+        }
+        setOtherEvents(updatedEvents);
+        if (isMultiplayer && matchRef.current) {
+          matchRef.current.child('otherEvents').set(updatedEvents);
+        } else {
+          const gs = JSON.parse(localStorage.getItem('juniorLeagueGame') || '{}');
+          gs.otherEvents = updatedEvents;
+          localStorage.setItem('juniorLeagueGame', JSON.stringify(gs));
+        }
+        setAnnouncementTitle('');
+        setAnnouncementMessage('');
+        setAnnouncementTime('');
+        setEditingAnnouncementIndex(null);
+      };
+
+      // Edit announcement event
+      const handleEditAnnouncement = (idx) => {
+        const ev = announcementEvents[idx];
+        setAnnouncementTitle(ev.headline);
+        setAnnouncementMessage(ev.message);
+        setAnnouncementTime(ev.time || '');
+        setEditingAnnouncementIndex(idx);
+      };
+
+      // Delete announcement event
+      const handleDeleteAnnouncement = (idx) => {
+        if (!window.confirm('Delete this announcement?')) return;
+        const ev = announcementEvents[idx];
+        const globalIdx = otherEvents.findIndex(e => e.type === 'announcement' && e.timestamp === ev.timestamp);
+        const updatedEvents = otherEvents.filter((_, i) => i !== globalIdx);
+        setOtherEvents(updatedEvents);
+        if (isMultiplayer && matchRef.current) {
+          matchRef.current.child('otherEvents').set(updatedEvents);
+        } else {
+          const gs = JSON.parse(localStorage.getItem('juniorLeagueGame') || '{}');
+          gs.otherEvents = updatedEvents;
+          localStorage.setItem('juniorLeagueGame', JSON.stringify(gs));
+        }
+        if (editingAnnouncementIndex === idx) {
+          setAnnouncementTitle('');
+          setAnnouncementMessage('');
+          setAnnouncementTime('');
+          setEditingAnnouncementIndex(null);
+        }
+      };
       const audioRefs = { homeGoal: useRef(null), awayGoal: useRef(null), homePenalty: useRef(null), awayPenalty: useRef(null), intro: useRef(null) };
       const [introPlaying, setIntroPlaying] = useState(false);
       const matchRef = useRef(null);
@@ -6489,9 +6565,11 @@ V334.372z M421.925,274.284h-40.212v-45.25h22.904c9.563,0,17.308,7.758,17.308,17.
                             }
 
                             if (event.type === 'announcement') {
+                              // Use 'headline' if present, fallback to 'title' for backward compatibility
+                              const headline = event.headline || event.title || '';
                               return (
                                 <div key={eventId} className="relative w-full flex justify-center mb-6">
-                                  {/* Center Node */}
+                                  {/* Center Node for neutral announcement */}
                                   <div
                                     className={`relative z-20 flex flex-col items-center max-w-[280px] sm:max-w-xs ${canExpand ? 'cursor-pointer' : ''}`}
                                     onClick={() => canExpand && toggleEventExpanded(eventId)}
@@ -6501,14 +6579,14 @@ V334.372z M421.925,274.284h-40.212v-45.25h22.904c9.563,0,17.308,7.758,17.308,17.
                                         ${darkMode ? 'bg-purple-900 border-purple-700 text-white' : 'bg-purple-100 border-purple-300 text-purple-900'}
                                      `}>
                                       <IconMegaphone />
-                                      <span className="font-bold text-sm">{event.title}</span>
+                                      <span className="font-bold text-sm">{headline}</span>
                                       {event.time && <span className="text-xs opacity-75 font-mono ml-1">{event.time}</span>}
                                     </div>
 
                                     {/* Expanded Message */}
-                                    {isExpanded && event.message && (
+                                    {isExpanded && (event.message || event.msg) && (
                                       <div className={`mt-2 p-3 rounded-lg text-sm text-center w-full ${darkMode ? 'bg-gray-800 border border-gray-700 text-gray-300' : 'bg-white border border-gray-200 text-gray-700'} shadow-sm animate-fadeIn`}>
-                                        {event.message}
+                                        {event.message || event.msg}
                                       </div>
                                     )}
                                   </div>
